Fix spacing in loadmore teaserlist

--- a/assets/src/css/site/_styles.scss
+++ b/assets/src/css/site/_styles.scss
@@ -66,6 +66,7 @@
     margin-top: 0 !important;
 }
 
+
 .no-margin-bottom {
     margin-bottom: 0 !important;
 }
@@ -75,27 +76,32 @@
  * Basic styles for AJAX-driven loadmore-elements
  */
 
-.loadmore {
 
-    .loadmore-content {
-        margin: 0;
-    }
+.loadmore-content {
+    margin: 0;
+}
 
-    .loadmore-button {
-        display: block;
-        margin: 0 auto;
-        white-space: nowrap;
-    }
 
-    .loadmore-spinner {
-        display: none;
-
-        & > * {
-            margin: 0 auto;
-        }
-    }
+.loadmore-action-wrapper {
+    margin-top: var(--wp--preset--spacing--50);
 
     .wp-block-buttons {
         display: flex;
     }
+}
+
+
+.loadmore-spinner {
+    display: none;
+
+    & > * {
+        margin: 0 auto;
+    }
+}
+
+
+.loadmore-button {
+    display: block;
+    margin: 0 auto;
+    white-space: nowrap;
 }
